syntax = "proto3";

option csharp_namespace = "Engine";

package PlayerStateServerGRPC;

// The greeting service definition.
service PlayerStateServerGRPC {
	// Sends a greeting
	rpc CreatePlayerState (CreateRequest) returns (PlayerStateReply);
}

// The response message containing the greetings.
message PlayerStateReply {
	string message = 1;
}

message CreateRequest {
	string Game = 1;
	string PlayerName=2;
}